# dup-file-finder

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-package.yml  ruff.yml
deduper/: __init__.py  cli.py  core.py  web.py
dup_file_finder/: __init__.py  cli.py  core.py  utils.py
tests/: test_core.py
